Fix hidden input visibility

--- a/src/app/view/perspectives/table/header/hidden-input/table-hidden-input.component.scss
+++ b/src/app/view/perspectives/table/header/hidden-input/table-hidden-input.component.scss
@@ -3,4 +3,5 @@ input {
   caret-color: transparent;
   cursor: default;
   width: 10px;
+  color: white !important;
 }
